--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.3",
-    "babel-plugin-macros": "^3.1.0",
+    "classnames": "^2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-and-background-image-fade": "^1.0.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
