--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.6.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -29,6 +30,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.2.0",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.5"
   },
   "devDependencies": {
