--- a/package.json
+++ b/package.json
@@ -1,42 +1,64 @@
 {
-  "name": "youtube-app",
+  "name": "movie-explore-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:dev": "npx dotenv -e .env.local -- prisma migrate dev",
+    "db:push": "npx dotenv -e .env.local -- prisma db push",
+    "migrate:reset": "npx dotenv -e .env.local -- prisma migrate reset",
+    "db:seed": "npx dotenv -e .env.local -- prisma db seed",
+    "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
+    "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.6.0",
+    "@tanstack/react-query": "^4.27.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "dotenv-cli": "^7.1.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.20.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.12.2",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-hook-form": "^7.43.9",
     "react-loading-skeleton": "^3.2.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
+    "react-responsive-modal": "^6.4.1",
+    "react-slick": "^0.29.0",
+    "react-toggle-dark-mode": "^1.1.1",
+    "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
   }
 }
