--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.6.0",
     "@tanstack/react-query": "^4.27.0",
+    "@testing-library/cypress": "^9.0.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -43,6 +44,8 @@
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
+    "react-id-generator": "^3.0.2",
     "react-loading-skeleton": "^3.2.0",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
@@ -57,6 +60,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.12.0",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
