--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.12.0",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
