--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@netlify/plugin-nextjs": "^4.39.1",
     "@next/font": "13.1.6",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
