--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "dotenv-cli": "^7.1.0",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
     "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
@@ -57,8 +55,11 @@
     "@types/lodash": "^4.14.194",
     "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-eslint": "^10.1.0",
     "cypress": "^12.12.0",
     "encoding": "^0.1.13",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.12",
     "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
