--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/context/Globalcontext.tsx",
+    "context/Globalcontext.tsx",
     "firebase.config.js"
   ],
   "exclude": ["node_modules"]
