--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
     "lodash": "^4.17.21",
-    "next": "13.1.6",
+    "next": "^13.5.4",
     "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
@@ -50,6 +50,7 @@
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.3.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
     "cypress": "^12.12.0",
     "encoding": "^0.1.13",
     "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^13.5.4",
     "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
