--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
     "lodash": "^4.17.21",
-    "next": "13.5.4-canary.1",
+    "next": "13.4.13",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
